# plaud-poller

./: .env.example  .gitignore  README.md  pyproject.toml
plaud_poller/: __init__.py  api.py  auth.py  config.py  doctor.py  poll.py  privacy.py  render.py  state.py  verify.py
scripts/: run-poller.zsh
tests/: test_config.py  test_render.py
